# SubForge

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  package.json
.github/workflows/: docs-site-sync.yml  release_ci.yml  release_publish.yml
apps/core/: Cargo.toml
crates/app-core/: Cargo.toml
crates/app-core/src/: engine.rs  error.rs  fetcher.rs  lib.rs  plugin_install.rs  source_service.rs  utils.rs
crates/app-core/src/fetcher/: routing_template.rs
crates/app-core/src/parser/: anytls.rs  base64.rs  common.rs  hysteria2.rs  mod.rs  ss.rs  trojan.rs  tuic.rs  vless.rs  vmess.rs
crates/app-core/src/script_executor/: logging.rs  mod.rs
crates/app-core/src/source_service/: validation.rs
crates/app-core/src/tests/: engine.rs  fetcher.rs  logging_redaction.rs  mod.rs  parser.rs  plugin_install.rs  shared.rs  source_service.rs
crates/app-plugin-runtime/: Cargo.toml
crates/app-plugin-runtime/src/: lib.rs  lua_sandbox.rs
crates/app-plugin-runtime/src/lua_sandbox/runtime_apis/: base64_api.rs  cookie_api.rs  html_api.rs  http_api.rs  json_api.rs  log_api.rs  mod.rs  secret_api.rs  time_api.rs
crates/app-secrets/: Cargo.toml
crates/app-secrets/src/: constants.rs  crypto.rs  error.rs  io_utils.rs  keys.rs  lib.rs  redaction.rs  tests.rs  traits.rs
crates/app-secrets/src/stores/: env.rs  file.rs  keyring.rs  memory.rs  mod.rs
crates/app-transform/: Cargo.toml
crates/app-transform/src/: base64.rs  clash.rs  error.rs  lib.rs  shared.rs  singbox.rs  template_context.rs  transformer.rs
crates/app-transform/src/clash/: mod.rs  output.rs
crates/app-transform/src/fixtures/: base64_hysteria2.txt  base64_ss.txt  base64_trojan.txt  base64_tuic.txt  base64_vless.txt  base64_vmess.txt  clash_hysteria2.yaml  clash_ss.yaml  clash_trojan.yaml  clash_tuic.yaml  clash_vless.yaml  clash_vmess.yaml
crates/app-transform/src/tests/: mod.rs
crates/app-transport/: Cargo.toml
crates/app-transport/src/: lib.rs  profiles.rs  tests.rs
docs/: quick-start.md
docs/api/: overview.md
migrations/: V002__script_logs.sql
scripts/: e2e_gate_check.ps1  p8_6_gate_check.ps1
(+102 files in other folders)
