[package]
name = "app-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
app-common = { path = "../app-common" }
app-plugin-runtime = { path = "../app-plugin-runtime" }
app-secrets = { path = "../app-secrets" }
app-storage = { path = "../app-storage" }
regex.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
