[package]
name = "app-transform"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
app-common = { path = "../app-common" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
serde_yaml = "^0.9"
