[package]
name = "app-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
reqwest = { workspace = true, features = ["cookies"] }
thiserror.workspace = true

[dev-dependencies]
axum.workspace = true
tokio.workspace = true
